        self-feeding loops expecially with min size hints on scrollers (which
        the change in smart object infra broke too - fixed here).

2012-07-18  Yan Wang

        * Small fix to account for framespace that is used in wayland
        (0 in x11 so shouldnt affect x11).

2012-07-18  Hermet (ChunEon Park)

	* Fix the mapbuf to resize the contents(smart obj) correctly. When smart obj was
	set as the contents the _configure would be called recursively. In this process
	the lastest size could be reverted as the previous one.

2012-07-19  Gustavo Sverzut Barbieri (k-s)

	* Add Elm_Win_Trap and elm_win_trap_set() to allow e17 integration.

2012-07-23  Hermet (ChunEon Park)

	* fixed invalid sd memory access when delete window inlined image

2012-07-24  Hermet (ChunEon Park)

	* fixed scroller to not have the hold flag when mouse up happened.

2012-07-24  Gustavo Sverzut Barbieri (k-s)

	* Add elm_flip_go_to()

2012-07-25  Carsten Haitzler (The Rasterman)

	* Fix elementary quicklaunch to transprot environment over as
        well as args and cwd.

2012-07-27  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access supoprt in popup.

2012-07-30  Cedric Bail

	* Allow freeze/thaw on Elm_Layout and reduce number of object update.
	* Defer Elm_Calendar generation until really needed.

2012-07-31  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access supoprt in ctxpopup and dayselector.

2012-08-02  Cedric Bail

	* Fix elm_image_orient_set/get.

2012-08-06  Cedric Bail

	* Make Elm_Slider update itself asynchronously.

2012-08-09  Cedric Bail

	* Reset main loop after fork in quicklaunch.

2012-08-18  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access in: colorselecto, win, diskselector,
          gengrid, genlist, progressbar, slider, label, entry

2012-08-20   Jihyeon Seol

	* Fix sizing issue in multibutton entry by making all lines
          the same height.

2012-08-20  Shinwoo Kim (kimcinoo)

	* Patch in incomplte access support in datetime.
